[tool.poetry]
name = "appmap"
version = "2.1.0"
description = "Create AppMap files by recording a Python application."
readme = "README.md"
authors = [
  "Alan Potter <alan@app.land>",
  "Viraj Kanwade <viraj.kanwade@forgeahead.io>",
  "Rafał Rzepecki <rafal@app.land>"
]
homepage = "https://github.com/applandinc/appmap-python"
license = "MIT"
classifiers = [
        'Development Status :: 4 - Beta',
        'Framework :: Django',
        'Framework :: Django :: 3.2',
        'Framework :: Flask',
        'Framework :: Pytest',
        'Intended Audience :: Developers',
        'Topic :: Software Development',
        'Topic :: Software Development :: Debuggers',
        'Topic :: Software Development :: Documentation'
]

include = [
    { path = 'appmap.pth', format = ['sdist','wheel'] },
    { path = '_appmap/test/**/*', format = 'sdist' }
]

exclude = ['_appmap/wrapt']

packages = [
    { include = "appmap" },
    { include = "_appmap/*.py" },
    { include = "_appmap/wrapt/**/*", from = "vendor" }
]

[tool.poetry.dependencies]
# Please update the documentation if changing the supported python version
# https://github.com/applandinc/applandinc.github.io/blob/master/_docs/reference/appmap-python.md#supported-versions
python = "^3.8"
PyYAML = ">=5.3.0"
inflection = ">=0.3.0"
importlib-resources = "^5.4.0"
packaging = ">=19.0"
# If you include "Django" as an optional dependency here, you'll be able to use poetry to install it
# in your dev environment. However, doing so causes poetry v1.2.0 to remove it from the virtualenv
# *created and managed by tox*, i.e. not your dev environment.
#
# So, if you'd like to run the tests outside of tox, run `pip install -r requirements-dev.txt` to
# install it and the rest of the dev dependencies.

[tool.poetry.group.dev.dependencies]
Twisted = "^22.4.0"
asgiref = "^3.7.2"
black = "^24.2.0"
coverage = "^5.3"
flake8 = "^3.8.4"
httpretty = "^1.0.5"
isort = "^5.10.1"
pprintpp = ">=0.4.0"
pyfakefs = "^5.3.5"
pylint = "^3.0"
pytest = "^7.3.2"
pytest-django = "~4.7"
pytest-mock = "^3.5.1"
pytest-randomly = "^3.5.0"
pytest-shell-utilities = "^1.8.0"
pytest-xprocess = "^0.23.0"
python-decouple = "^3.5"
requests = "^2.25.1"
tox = "^3.22.0"
# v2.30.0 of "requests" depends on urllib3 v2, which breaks the tests for http_client_requests. Pin
# to v1 until this gets fixed.
urllib3 = "^1"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
httpx = "^0.27.0"
pytest-env = "^1.1.3"
pytest-console-scripts = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pytest11"]
appmap = "appmap.pytest"

[tool.poetry.scripts]
appmap-agent-init = "appmap.command.appmap_agent_init:run"
appmap-agent-status = "appmap.command.appmap_agent_status:run"
appmap-agent-validate = "appmap.command.appmap_agent_validate:run"
appmap-python = "appmap.command.runner:run"

[tool.black]
line-length = 102
extend-exclude = '''
/(
  | vendor
  | _appmap/wrapt
)/
'''

[tool.isort]
profile = "black"
extend_skip = [
  "vendor",
  "_appmap/wrapt"
  ]

[tool.vendoring]
destination = "vendor/_appmap/"
requirements = "vendor/vendor.txt"
namespace = ""

protected-files = ["vendor.txt"]
patches-dir = "vendor/patches"

[tool.vendoring.transformations]
drop = [
    "**/*.so",
]
