[project]
name = "appmap"
version = "2.1.9"
description = "Create AppMap files by recording a Python application."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Alan Potter", email = "alan@app.land" },
  { name = "Viraj Kanwade", email = "viraj.kanwade@forgeahead.io" },
  { name = "Rafał Rzepecki", email = "rafal@app.land" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Flask",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Documentation",
]

# Please update the documentation if changing the supported python version
# https://github.com/applandinc/applandinc.github.io/blob/master/_docs/reference/appmap-python.md#supported-versions
dependencies = [
  "PyYAML>=5.3.0",
  "inflection>=0.3.0",
  "importlib-resources>=5.4.0",
  "packaging>=19.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.3.2,<8.0",
  "pytest-mock>=3.5.1,<4.0",
  "pytest-randomly>=3.5.0,<4.0",
  "pytest-shell-utilities>=1.8.0,<2.0",
  "pytest-xprocess>=0.23.0,<1.0",
  "pytest-env>=1.1.3,<2.0",
  "pytest-console-scripts>=1.4.1,<2.0",
  "pytest-xdist>=3.6.1,<4.0",
  "httpretty>=1.0.5,<2.0",
  "pyfakefs>=5.3.5,<6.0",
  "requests>=2.25.1,<3.0",
  "python-decouple>=3.5,<4.0",
  "Twisted>=22.4.0,<23.0",
  "incremental<24.7.0",
  "asgiref>=3.7.2,<4.0",
  "psutil>=6.0.0,<7.0",
  "uvicorn>=0.27.1,<1.0",
  "fastapi>=0.110.0,<1.0",
  "httpx>=0.27.0,<1.0",
  # v2.30.0 of "requests" depends on urllib3 v2, which breaks the tests for http_client_requests. Pin
  # to v1 until this gets fixed.
  "urllib3>=1,<2",
  "Django",
  "Flask",
  "sqlalchemy",
  "pytest-django>=4.7,<5.0",
  "numpy>=1.24.4,<2.0; python_version < '3.9'",
  "numpy>=2.0; python_version >= '3.9'",
]
dev = [
  "appmap[test]",
  "black>=24.2.0,<25.0",
  "coverage>=5.3,<6.0",
  "flake8>=3.8.4,<4.0",
  "isort>=5.10.1,<6.0",
  "pprintpp>=0.4.0,<1.0",
  "pylint>=3.0,<4.0",
  "tox>=4.0,<5.0",
  "tox-uv>=1.0,<2.0",
  "tox-gh-actions>=3.0,<4.0",
  "ruff>=0.5.3,<1.0",
]

[project.urls]
Homepage = "https://github.com/applandinc/appmap-python"

[project.scripts]
appmap-agent-init = "appmap.command.appmap_agent_init:run"
appmap-agent-status = "appmap.command.appmap_agent_status:run"
appmap-agent-validate = "appmap.command.appmap_agent_validate:run"
appmap-python = "appmap.command.runner:run"

[project.entry-points.pytest11]
appmap = "appmap.pytest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["appmap", "_appmap"]
exclude = ["_appmap/test", "_appmap/wrapt"]
force-include = { "appmap.pth" = "appmap.pth", "vendor/_appmap/wrapt" = "_appmap/wrapt" }

[tool.hatch.build.targets.sdist]
only-include = [
  "appmap",
  "_appmap",
  "appmap.pth",
  "vendor",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.black]
line-length = 102
extend-exclude = '''
/(
  | vendor
  | _appmap/wrapt
)/
'''

[tool.isort]
profile = "black"
extend_skip = [
  "vendor",
  "_appmap/wrapt"
  ]

[tool.vendoring]
destination = "vendor/_appmap/"
requirements = "vendor/vendor.txt"
namespace = ""

protected-files = ["vendor.txt"]
patches-dir = "vendor/patches"

[tool.vendoring.transformations]
drop = [
    "**/*.so",
]
